--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,12 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angularfire": "~1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "viiniviikariApp"
+  "moduleName": "viiniviikari"
 }
