--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angularfire": "~1.1.1"
+    "angularfire": "~1.1.1",
+    "ng-tags-input": "2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
